--- a/Config-Hot-Reload-Engine.csproj
+++ b/Config-Hot-Reload-Engine.csproj
@@ -1,11 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
     <TargetFramework>net10.0</TargetFramework>
-    <RootNamespace>Config_Hot_Reload_Engine</RootNamespace>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageId>ConfigHotReloadEngine</PackageId>
+    <Version>1.0.0</Version>
+    <Authors>Reard Gjoni</Authors>
+    <Company>Reard Gjoni GitHub</Company>
+    <Description>A .NET library for hot-reloading JSON configuration at runtime</Description>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <RepositoryUrl>https://github.com/IcyDrae/ConfigHotReloadEngine</RepositoryUrl>
   </PropertyGroup>
 
 </Project>
